--- a/Computer Graphics/FunctionFilterEditor.xaml
+++ b/Computer Graphics/FunctionFilterEditor.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Computer_Graphics.FilterEditorWindow"
+﻿<Window x:Class="Computer_Graphics.FunctionFilterEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
